# ld52

./: Cargo.toml  README.md  deploy.sh  design.md
assets/: sheet.png~
src/: main.rs
